# AA_Bot

./: .env.docker.template  .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  download_models.py  pyproject.toml
.idx/: dev.nix
data/: FAQS.json
data/final/: FAQS.json  FAQS_IDX.json  Ground_Truth.json  Ground_Truth_IDX.json  answers_gpt_20b.json  answers_llama4_scout.json
src/: ingest.py  main.py
src/LLM/: main.py
src/RAG/: main.py  prompts.py
src/config/: db.py  envs.py  paths.py  utils.py
src/eval/: generate_ground_truth.py  prompts.py
src/eval/llm/: answers_kimi_k2.json  generate_answers.py
src/eval/llm/cosine_similarity/: evaluate.py  similarity_gpt_20b.csv  similarity_kimi_k2.csv  similarity_llama4_scout.csv
src/eval/llm/llm_judge/: GPT_prompt1.json  GPT_prompt2.json  KIMI_prompt1.json  KIMI_prompt2.json  LLAMA_prompt1.json  LLAMA_prompt2.json  evaluate.py  prompts.py
src/eval/retrival/: Eval_results.csv  evaluate.py  metrics.py
src/monitoring/: tracing.py
src/server/: app.py
src/server/templates/: index.html
