[project]
name = "AA_Bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arize-phoenix>=12.6.1",
    "fastapi>=0.119.0",
    "fastembed>=0.7.3",
    "jinja2>=3.1.6",
    "openai>=1.102.0",
    "openinference-semantic-conventions>=0.1.24",
    "opentelemetry-api>=1.38.0",
    "opentelemetry-sdk>=1.38.0",
    "pandas>=2.3.2",
    "pydantic-settings>=2.10.1",
    "qdrant-client>=1.15.1",
    "tqdm>=4.67.1",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.11",
]
